Fix T50950: Converting meshes fails w/ boolean